# CourseWork7

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
core/: admin.py  models.py
core/migrations/: 0001_initial.py  0002_alter_user_is_active.py  0003_alter_user_options_remove_user_image_and_more.py  0004_alter_user_options.py  0005_alter_user_options.py  0006_alter_user_options.py  0007_alter_user_options.py  0008_alter_user_options.py
todolist/: settings.py  urls.py
