[tool.poetry]
name = "coursework7"
version = "0.1.0"
description = ""
authors = ["Tuman8 <i-a-l-e-x@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1"
psycopg2-binary = "^2.9.3"
pre-commit = "^2.20.0"
django-environ = "^0.9.0"
django-cors-headers = "^3.13.0"
djangorestframework = "^3.13.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tools.isort]
py_version = 310
profile = 'django'
line_lenght = 120
multi_line_output = 2
known_first_party = ['todolist', 'core']

[tool.flake8]
max-line-lenght = 120
per-file-ignores = """
    */migrations/*: E501,
"""
